@@ -1,5 +1,15 @@
 2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/infoview.c: (infoview_create), (infoview_update):
+	* src/infoview.h:
+	* src/interface.c: (create_proc_view), (toggle_infoview),
+	(update_sensitivity):
+	* src/procman.c: (procman_data_new):
+	* src/procman.h: Moved a bunch of global variables from infoview.c
+	to procdata->infoview.*.
+
+2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/infoview.c:
 	* src/interface.c: (make_title_label):
 	* src/interface.h: Merged multiple make_title_label().
